2013-09-27  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.2
	* Version 1.6.2 released

2013-08-09  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* setgridtype: parameter regular: added support for reduced grids on sub area

2013-08-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mastrfu: added missing value support

2013-08-05  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* select: added support for key >timestep_of_year<

2013-08-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* selyear: fixed wrong result for negative years [Bug #3836]

2013-08-01  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added support of ASCII grid description for GRID_LAEA

2013-07-29  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridGenArea: added warning message if grid cell corner not available
	* gp2sp: added warning message if gp data not found

2013-07-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* split*: use filename extension from input file

2013-06-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gridCurvilinearToRegular: set tolerance to 1.e-6

2013-06-28  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.6.1
	* Version 1.6.1 released

2013-06-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* select: added support for key >minute< [request: Beate Gayer]

2013-06-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* inttime: removes last time step [Bug #3611]

2013-05-24  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* mrotuvb: added option >noint< to disable the interpolation to the grid cell centre

2013-05-14  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* scatter: fails with missing values [Bug #3492]

2013-04-19  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* gradsdes: added support for netCDF files

2013-04-18  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Info: add chunking information of netcdf files (only with verbose output) [Feature #3489]

2013-04-17 Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>
